# jsonrpc_client

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
htmlcov/: index.html  status.json
httpclient/: apps.py  jsonrpc_client.py  tests.py  urls.py  utils.py  views.py
httpclient/templates/: call_api.html
